Message Bug Fixed

--- a/app/src/main/res/layout/activity_images_display.xml
+++ b/app/src/main/res/layout/activity_images_display.xml
@@ -40,7 +40,7 @@
 			android:layout_weight="1.3"
 			android:background="@color/transparent"
 			android:foreground="@drawable/ripple_small_corners"
-			android:text="21"
+			tools:text="21"
 			android:textColor="@color/normal_text"
 			app:icon="@drawable/ic_baseline_reply_all_24"
 			app:iconGravity="textStart"
@@ -55,7 +55,7 @@
 			android:layout_weight="1.3"
 			android:background="@color/transparent"
 			android:foreground="@drawable/ripple_small_corners"
-			android:text="21"
+			tools:text="21"
 			android:textColor="@color/normal_text"
 			app:icon="@drawable/ic_baseline_comment_24"
 			app:iconGravity="textStart"
@@ -80,7 +80,7 @@
 			android:layout_weight="0.5"
 			android:gravity="center"
 			android:letterSpacing="0.1"
-			android:text="21"
+			tools:text="21"
 			android:textColor="@color/normal_text"
 			android:textSize="15sp"
 			android:textStyle="bold"/>
