--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -114,6 +114,10 @@
 		android:name="com.rainbowwolfer.myspacedemo1.ui.fragments.main.user.UserFragment"
 		android:label="@string/profile"/>
 	<fragment
+		android:id="@+id/sub_nav_profile"
+		android:name="com.rainbowwolfer.myspacedemo1.ui.fragments.main.user.UserFragment"
+		android:label="@string/profile"/>
+	<fragment
 		android:id="@+id/nav_drafts"
 		android:name="com.rainbowwolfer.myspacedemo1.ui.fragments.main.drafts.DraftsFragment"
 		android:label="@string/drafts"
