--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -66,8 +66,8 @@
 									android:layout_height="26dp"
 									android:layout_marginEnd="10dp"
 									android:layout_weight="1"
-									android:src="@drawable/ic_baseline_widgets_24"
-									android:contentDescription=""/>
+									android:contentDescription=""
+									android:src="@drawable/ic_baseline_widgets_24"/>
 								
 								<TextView
 									android:id="@+id/main_text_postsLimit"
@@ -81,12 +81,12 @@
 									android:layout_width="wrap_content"
 									android:layout_height="wrap_content"
 									android:layout_weight="1"
-									android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
-									android:contentDescription=""/>
+									android:contentDescription=""
+									android:src="@drawable/ic_baseline_keyboard_arrow_down_24"/>
 							</LinearLayout>
 							
 							<com.google.android.material.textfield.TextInputLayout
-								android:id="@+id/textInputLayout"
+								android:id="@+id/main_input_search"
 								style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
 								android:layout_width="0dp"
 								android:layout_height="45dp"
@@ -100,9 +100,12 @@
 								app:startIconDrawable="@drawable/ic_baseline_search_24">
 								
 								<com.google.android.material.textfield.TextInputEditText
+									android:id="@+id/main_edit_search"
 									android:layout_width="match_parent"
 									android:layout_height="wrap_content"
 									android:hint="@string/search"
+									android:imeOptions="actionSearch"
+									android:inputType="text"
 									android:maxLines="1"
 									android:paddingTop="0dp"
 									android:paddingBottom="0dp"
@@ -126,8 +129,8 @@
 						android:id="@+id/imageView3"
 						android:layout_width="100dp"
 						android:layout_height="100dp"
-						android:src="@drawable/ic_baseline_public_24"
-						android:contentDescription=""/>
+						android:contentDescription=""
+						android:src="@drawable/ic_baseline_public_24"/>
 					
 					<TextView
 						android:id="@+id/textView7"
