--- a/app/src/main/res/layout/fragment_welcome2.xml
+++ b/app/src/main/res/layout/fragment_welcome2.xml
@@ -21,7 +21,7 @@
 		app:layout_constraintTop_toTopOf="parent"/>
 	
 	<TextView
-		android:id="@+id/welcom2text"
+		android:id="@+id/welcome2text"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="16dp"
@@ -56,7 +56,7 @@
 		app:layout_constraintEnd_toEndOf="parent"/>
 	
 	<TextView
-		android:id="@+id/welcom2_button_previous"
+		android:id="@+id/welcome2_button_previous"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="24dp"
