--- a/app/src/main/res/layout/message_detail_row_layout_right.xml
+++ b/app/src/main/res/layout/message_detail_row_layout_right.xml
@@ -3,7 +3,8 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
-	android:layout_height="wrap_content">
+	android:layout_height="wrap_content"
+	xmlns:tools="http://schemas.android.com/tools">
 	
 	<de.hdodenhof.circleimageview.CircleImageView
 		android:id="@+id/messageDetailRight_image_avatar"
@@ -23,7 +24,7 @@
 		app:layout_constraintTop_toTopOf="@+id/messageDetailRight_image_avatar">
 		
 		<com.google.android.material.circularreveal.cardview.CircularRevealCardView
-			android:id="@+id/messageDetailRight_cardview_content"
+			android:id="@+id/messageDetailRight_cardView_content"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_gravity="end"
@@ -40,13 +41,13 @@
 			
 			<TextView
 				android:id="@+id/messageDetailRight_text_content"
+				tools:text="Hello World"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
 				android:layout_marginStart="15dp"
 				android:layout_marginTop="10dp"
 				android:layout_marginEnd="10dp"
 				android:layout_marginBottom="10dp"
-				android:text="Hello WOrld"
 				android:textSize="15sp"/>
 		</com.google.android.material.circularreveal.cardview.CircularRevealCardView>
 	</FrameLayout>
