--- a/app/src/main/res/xml/fragment_post_detail_comments_scene.xml
+++ b/app/src/main/res/xml/fragment_post_detail_comments_scene.xml
@@ -6,28 +6,30 @@
 		motion:constraintSetEnd="@+id/end"
 		motion:constraintSetStart="@id/start"
 		motion:duration="100">
-		<KeyFrameSet></KeyFrameSet>
+		<KeyFrameSet>
+		
+		</KeyFrameSet>
 	</Transition>
 	
 	<ConstraintSet android:id="@+id/start">
 		<Constraint
 			android:id="@+id/postDetail_layout_loading"
-			motion:layout_constraintEnd_toEndOf="parent"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			motion:layout_constraintTop_toTopOf="parent"
+			android:alpha="1"
+			motion:layout_constraintEnd_toEndOf="parent"
 			motion:layout_constraintStart_toStartOf="parent"
-			android:alpha="1"/>
+			motion:layout_constraintTop_toTopOf="parent"/>
 	</ConstraintSet>
 	
 	<ConstraintSet android:id="@+id/end">
 		<Constraint
 			android:id="@+id/postDetail_layout_loading"
-			motion:layout_constraintEnd_toEndOf="parent"
 			android:layout_width="match_parent"
 			android:layout_height="1dp"
-			motion:layout_constraintTop_toTopOf="parent"
+			android:alpha="0"
+			motion:layout_constraintEnd_toEndOf="parent"
 			motion:layout_constraintStart_toStartOf="parent"
-			android:alpha="0"/>
+			motion:layout_constraintTop_toTopOf="parent"/>
 	</ConstraintSet>
 </MotionScene>
