--- a/app/src/main/res/xml/layout_change_username_scene.xml
+++ b/app/src/main/res/xml/layout_change_username_scene.xml
@@ -6,22 +6,26 @@
 		motion:constraintSetEnd="@+id/end"
 		motion:constraintSetStart="@id/start"
 		motion:duration="300">
-		<KeyFrameSet></KeyFrameSet>
+		<KeyFrameSet>
+		
+		</KeyFrameSet>
 	</Transition>
 	
-	<ConstraintSet android:id="@+id/start"></ConstraintSet>
+	<ConstraintSet android:id="@+id/start">
+	
+	</ConstraintSet>
 	
 	<ConstraintSet android:id="@+id/end">
 		<Constraint
 			android:id="@+id/newUsername_progressBar"
-			motion:layout_constraintEnd_toEndOf="parent"
 			android:layout_width="0dp"
 			android:layout_height="wrap_content"
-			android:layout_marginEnd="15dp"
-			motion:layout_constraintTop_toBottomOf="@+id/newUsername_input_new"
-			android:alpha="1"
 			android:layout_marginStart="15dp"
+			android:layout_marginTop="8dp"
+			android:layout_marginEnd="15dp"
+			android:alpha="1"
+			motion:layout_constraintEnd_toEndOf="parent"
 			motion:layout_constraintStart_toStartOf="parent"
-			android:layout_marginTop="8dp"/>
+			motion:layout_constraintTop_toBottomOf="@+id/newUsername_input_new"/>
 	</ConstraintSet>
 </MotionScene>
