--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -81,11 +81,12 @@
 			
 			<com.google.android.material.button.MaterialButton
 				android:id="@+id/login_button_login"
-				android:layout_width="140dp"
+				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_marginTop="8dp"
 				android:text="@string/submit"
 				app:icon="@drawable/ic_baseline_check_24"
+				app:iconPadding="20dp"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintTop_toBottomOf="@+id/login_input_password"/>
@@ -93,11 +94,12 @@
 			<com.google.android.material.button.MaterialButton
 				android:id="@+id/login_button_forgetPassword"
 				style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-				android:layout_width="250dp"
+				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_marginTop="16dp"
 				android:text="@string/forget_password"
 				app:icon="@drawable/ic_baseline_contact_support_24"
+				app:iconPadding="20dp"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintHorizontal_bias="0.501"
 				app:layout_constraintStart_toStartOf="parent"
