--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -37,6 +37,9 @@
 					android:layout_height="60dp"
 					android:layout_marginStart="16dp"
 					android:layout_marginTop="16dp"
+					android:clickable="true"
+					android:focusable="true"
+					android:foreground="@drawable/round_ripple"
 					android:src="@drawable/ic_food"
 					app:civ_border_color="@color/normal_text"
 					app:civ_border_overlay="true"
