--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -13,13 +13,13 @@
 		android:id="@+id/splash_image_icon"
 		android:layout_width="150dp"
 		android:layout_height="150dp"
+		android:contentDescription=""
 		android:src="@drawable/icon_my_space"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintHorizontal_bias="0.5"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent"
-		android:contentDescription=""/>
+		app:layout_constraintTop_toTopOf="parent"/>
 	
 	<TextView
 		android:id="@+id/splash_text_title"
