--- a/app/src/main/res/layout/row_collection_post_layout.xml
+++ b/app/src/main/res/layout/row_collection_post_layout.xml
@@ -28,11 +28,11 @@
 		android:layout_height="wrap_content"
 		android:layout_marginStart="8dp"
 		android:layout_marginTop="4dp"
-		tools:text="\@RainbowWolfer"
 		android:textSize="18sp"
 		android:textStyle="bold"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/rowCollectionPost_text_title"/>
+		app:layout_constraintTop_toBottomOf="@+id/rowCollectionPost_text_title"
+		tools:text="\@RainbowWolfer"/>
 	
 	<TextView
 		android:id="@+id/rowCollectionPost_text_date"
@@ -40,9 +40,9 @@
 		android:layout_height="wrap_content"
 		android:layout_marginStart="8dp"
 		android:layout_marginTop="8dp"
-		tools:text="2022-02-22 22:22:22"
 		app:layout_constraintStart_toEndOf="@+id/rowCollectionPost_text_helper1"
-		app:layout_constraintTop_toTopOf="parent"/>
+		app:layout_constraintTop_toTopOf="parent"
+		tools:text="2022-02-22 22:22:22"/>
 	
 	<androidx.appcompat.widget.AppCompatImageButton
 		android:id="@+id/rowCollectionPost_button_more"
@@ -89,11 +89,11 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="8dp"
+		android:contentDescription=""
 		app:layout_constraintBottom_toBottomOf="@+id/rowCollectionPost_text_username"
 		app:layout_constraintStart_toEndOf="@+id/rowCollectionPost_text_username"
 		app:layout_constraintTop_toTopOf="@+id/rowCollectionPost_text_username"
-		app:srcCompat="@drawable/ic_baseline_reply_all_24"
-		android:contentDescription=""/>
+		app:srcCompat="@drawable/ic_baseline_reply_all_24"/>
 	
 	<TextView
 		android:id="@+id/rowCollectionPost_text_title"
