--- a/app/src/main/res/drawable/ic_outline_people_alt_24.xml
+++ b/app/src/main/res/drawable/ic_outline_people_alt_24.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
 	android:width="24dp"
 	android:height="24dp"
+	android:tint="?attr/colorControlNormal"
 	android:viewportWidth="24"
-	android:viewportHeight="24"
-	android:tint="?attr/colorControlNormal">
+	android:viewportHeight="24">
 	<path
 		android:fillColor="@android:color/white"
 		android:pathData="M16.67,13.13C18.04,14.06 19,15.32 19,17v3h4v-3C23,14.82 19.43,13.53 16.67,13.13z"/>
