--- a/app/src/main/res/layout/activity_images_display.xml
+++ b/app/src/main/res/layout/activity_images_display.xml
@@ -40,11 +40,11 @@
 			android:layout_weight="1.3"
 			android:background="@color/transparent"
 			android:foreground="@drawable/ripple_small_corners"
-			tools:text="21"
 			android:textColor="@color/normal_text"
 			app:icon="@drawable/ic_baseline_reply_all_24"
 			app:iconGravity="textStart"
-			app:iconTint="@color/normal_text"/>
+			app:iconTint="@color/normal_text"
+			tools:text="21"/>
 		
 		<com.google.android.material.button.MaterialButton
 			android:id="@+id/imagesDisplay_button_comment"
@@ -55,11 +55,11 @@
 			android:layout_weight="1.3"
 			android:background="@color/transparent"
 			android:foreground="@drawable/ripple_small_corners"
-			tools:text="21"
 			android:textColor="@color/normal_text"
 			app:icon="@drawable/ic_baseline_comment_24"
 			app:iconGravity="textStart"
-			app:iconTint="@color/normal_text"/>
+			app:iconTint="@color/normal_text"
+			tools:text="21"/>
 		
 		<androidx.appcompat.widget.AppCompatImageButton
 			android:id="@+id/imagesDisplay_button_down"
@@ -80,10 +80,10 @@
 			android:layout_weight="0.5"
 			android:gravity="center"
 			android:letterSpacing="0.1"
-			tools:text="21"
 			android:textColor="@color/normal_text"
 			android:textSize="15sp"
-			android:textStyle="bold"/>
+			android:textStyle="bold"
+			tools:text="21"/>
 		
 		<androidx.appcompat.widget.AppCompatImageButton
 			android:id="@+id/imagesDisplay_button_up"
