--- a/app/src/main/res/layout/dialog_success_back_layout.xml
+++ b/app/src/main/res/layout/dialog_success_back_layout.xml
@@ -29,9 +29,9 @@
 			android:layout_width="80dp"
 			android:layout_height="80dp"
 			android:layout_marginEnd="10dp"
+			android:contentDescription=""
 			app:srcCompat="@drawable/ic_baseline_check_24"
-			app:tint="@color/green"
-			android:contentDescription=""/>
+			app:tint="@color/green"/>
 		
 		<TextView
 			android:id="@+id/successBackDialog_text_title"
