--- a/app/src/main/res/layout/message_detail_row_layout_right.xml
+++ b/app/src/main/res/layout/message_detail_row_layout_right.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
-	android:layout_height="wrap_content"
-	xmlns:tools="http://schemas.android.com/tools">
+	android:layout_height="wrap_content">
 	
 	<de.hdodenhof.circleimageview.CircleImageView
 		android:id="@+id/messageDetailRight_image_avatar"
@@ -41,14 +41,14 @@
 			
 			<TextView
 				android:id="@+id/messageDetailRight_text_content"
-				tools:text="Hello World"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
 				android:layout_marginStart="15dp"
 				android:layout_marginTop="10dp"
 				android:layout_marginEnd="10dp"
 				android:layout_marginBottom="10dp"
-				android:textSize="15sp"/>
+				android:textSize="15sp"
+				tools:text="Hello World"/>
 		</com.google.android.material.circularreveal.cardview.CircularRevealCardView>
 	</FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
